--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "chalk": "^1.1.3",
     "lodash": "^4.16.6",
     "fs-extra": "^2.0.0",
-    "jszip": "^3.1.3",
     "request": "2.79.0",
     "ms-rest-azure": "^1.15.4",
-    "azure-arm-resource": "1.6.1-preview"
+    "azure-arm-resource": "1.6.1-preview",
+    "zip-folder": "1.0.0"
   },
   "devDependencies": {
     "eslint": "^3.15.0",
