--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async": "^2.1.2",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
+    "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
     "fs-extra": "^2.0.0",
     "request": "2.79.0",
