--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   ],
   "dependencies": {
     "async": "^2.1.2",
+    "az-login": "^0.1.7",
+    "azure-arm-resource": "1.6.1-preview",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
+    "fs-extra": "^2.0.0",
     "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
-    "fs-extra": "^2.0.0",
-    "request": "2.79.0",
     "ms-rest-azure": "^1.15.4",
-    "azure-arm-resource": "1.6.1-preview",
+    "request": "2.79.0",
     "zip-folder": "1.0.0"
   },
   "devDependencies": {
