--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "main": "index.js",
   "author": "Azure Functions",
+  "scripts": {
+    "test": "eslint **/*.js"
+  },
   "repository": {
     "git": "https://github.com/serverless/serverless-azure-functions"
   },
@@ -21,7 +24,7 @@
   ],
   "dependencies": {
     "async": "^2.1.2",
-    "az-login": "^0.1.7",
+    "az-login": "^0.2.1",
     "azure-arm-resource": "1.6.1-preview",
     "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
@@ -33,10 +36,7 @@
     "zip-folder": "1.0.0"
   },
   "devDependencies": {
-    "eslint": "^3.15.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^2.0.1"
+    "eslint": "3.19.0"
   },
   "engines": {
     "node": ">= 6.5.0"
