--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^1.1.3",
     "fs-extra": "^2.0.0",
     "jsonpath": "^0.2.11",
+    "jszip": "^3.1.3",
     "lodash": "^4.16.6",
     "ms-rest-azure": "^1.15.4",
     "request": "2.81.0",
