--- a/package.json
+++ b/package.json
@@ -23,15 +23,12 @@
     "serverless.com"
   ],
   "dependencies": {
-    "async": "^2.1.2",
-    "az-login": "^0.2.3",
-    "azure-arm-resource": "1.6.1-preview",
+    "az-login": "^0.3.0",
+    "azure-arm-resource": "^2.0.0-preview",
     "bluebird": "^3.4.6",
-    "chalk": "^1.1.3",
     "fs-extra": "^2.0.0",
     "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
-    "ms-rest-azure": "^1.15.4",
     "request": "2.81.0",
     "zip-folder": "1.0.0"
   },
