create function.json as pre package hook and let serverless natively pacakge it
remove unneeded dependency for "zip-folder"

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "fs-extra": "^2.0.0",
     "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
-    "request": "2.81.0",
-    "zip-folder": "1.0.0"
+    "request": "2.81.0"
   },
   "devDependencies": {
     "eslint": "3.19.0"
