--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   "devDependencies": {
     "eslint": "3.19.0"
   },
+  "optionalDependencies": {
+    "serverless-webpack": "^4.2.0",
+    "webpack": "^3.10.0"
+  },
   "engines": {
     "node": ">= 6.5.0"
   }
