--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Azure Functions",
   "scripts": {
     "test": "eslint src/**/*.js",
+    "prebuild": "npm test",
     "build": "babel src --out-dir lib --presets=@babel/env && cp src/shared/bindings.json lib/shared"
   },
   "repository": {
