--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.7.0",
   "description": "Provider plugin for the Serverless Framework v1.x which adds support for Azure Functions.",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "author": "Azure Functions",
   "scripts": {
     "test": "eslint **/*.js",
