--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
     "open": "^6.3.0",
-    "request": "2.81.0"
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
