--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "eslint src/**/*.js",
     "prebuild": "rm lib/ -rf && npm test",
-    "build": "babel src --out-dir lib --presets=@babel/env && cp src/shared/bindings.json lib/shared"
+    "build": "tsc && cp src/shared/bindings.json lib/shared"
   },
   "repository": {
     "git": "https://github.com/serverless/serverless-azure-functions"
@@ -33,7 +33,6 @@
     "axios": "^0.18.0",
     "az-login": "^0.3.0",
     "azure-arm-resource": "^2.0.0-preview",
-    "bluebird": "^3.4.6",
     "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
     "open": "^6.3.0",
@@ -43,6 +42,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@types/open": "^6.1.0",
     "@types/serverless": "^1.18.2",
     "eslint": "3.19.0"
   },
