--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,16 @@
       "always"
     ],
     "no-console": 0
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "arrowFunctions": true,
+      "classes": true,
+      "impliedStrict": true,
+      "modules": true,
+      "spread": true
+    }
   }
 }
