--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "eslint src/**/*.js",
     "prebuild": "rm lib/ -rf && npm test",
-    "build": "tsc && cp src/shared/bindings.json lib/shared"
+    "build": "tsc"
   },
   "repository": {
     "git": "https://github.com/serverless/serverless-azure-functions"
@@ -35,7 +35,6 @@
     "azure-arm-resource": "^2.0.0-preview",
     "jsonpath": "^0.2.11",
     "lodash": "^4.16.6",
-    "open": "^6.3.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
