Deploys, but runs invoke when finished deploying

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@types/open": "^6.1.0",
+    "@types/request": "^2.48.1",
     "@types/serverless": "^1.18.2",
     "eslint": "3.19.0",
     "tslint": "^5.16.0"
