Add jest and eslint with typescript

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,17 @@
 {
-  "env": {
-    "node": true,
-    "es6": true
-  },
-  "extends": "eslint:recommended",
+  "parser": "@typescript-eslint/parser",
+  "extends": ["plugin:@typescript-eslint/recommended"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "indent": [
+    "@typescript-eslint/indent": [
       "error",
       2
     ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ],
-    "no-console": 0
-  },
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "arrowFunctions": true,
-      "classes": true,
-      "impliedStrict": true,
-      "modules": true,
-      "spread": true
-    }
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/explicit-function-return-type": 0,
+    "@typescript-eslint/no-parameter-properties": 0,
+    "@typescript-eslint/explicit-member-accessibility": 0,
+    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/no-use-before-define": 0
   }
 }
