--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Azure Functions",
   "scripts": {
     "test": "eslint src/**/*.js",
-    "prebuild": "rm lib/ -rf && npm test",
+    "prebuild": "rm -rf lib/ && npm test",
     "build": "tsc"
   },
   "repository": {
