fix: Removed resourceService from remove plugin ctor

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "az-login": "^0.3.0",
     "azure-arm-resource": "^2.0.0-preview",
     "jsonpath": "^0.2.11",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.11",
     "open": "^6.3.0",
     "request": "^2.81.0"
   },
@@ -42,6 +42,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@types/lodash": "^4.14.130",
     "@types/open": "^6.1.0",
     "@types/request": "^2.48.1",
     "@types/serverless": "^1.18.2",
