--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 
+os: linux
+
 matrix:
-  include:    
+  include:   
     - node_js: '6'
     - node_js: '8'
     - node_js: '10'
