Add jest and node types to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./lib",
     "strict": false,
     "resolveJsonModule": true,
-    "types": []
+    "types": ["jest", "node"]
   },
   "include": [
     "src",
