Mock of Serverless object for unit tests

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,8 +1,9 @@
 {
   "transform": {
-      "^.+\\.ts$": "ts-jest"
+    ".(ts|tsx)": "ts-jest"
   },
   "testRegex": "((\\.|/)(test|spec))\\.ts$",
+  "moduleFileExtensions": ["ts", "tsx", "js"],
   "testPathIgnorePatterns": ["/lib/", "/node_modules/"],
   "collectCoverage": true
 }
