--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pretest": "npm run lint",
     "test": "jest --config jest.config.js",
     "prebuild": "rm -rf lib/ && npm test",
-    "build": "tsc"
+    "build": "tsc",
+    "release-pr": "./scripts/release-pr.sh"
   },
   "repository": {
     "git": "https://github.com/serverless/serverless-azure-functions"
