--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mock-fs": "^4.10.0",
     "serverless": "^1.43.0",
     "ts-jest": "^24.0.2",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   },
   "optionalDependencies": {
