--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/**/*.ts",
     "lintfix": "eslint src/**/*.ts --fix",
     "pretest": "npm run lint",
-    "test": "jest --config jest.config.js",
+    "test": "jest --config jest.config.js --runInBand",
     "prebuild": "rm -rf lib/ && npm test",
     "build": "tsc"
   },
