--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,12 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:@typescript-eslint/recommended"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": ["@typescript-eslint"],
+  "extends": ["plugin:@typescript-eslint/recommended"],
   "rules": {
+    "quotes": ["error", "double"],
     "@typescript-eslint/indent": [
       "error",
       2
