--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Azure Functions",
   "scripts": {
     "lint": "eslint src/**/*.ts",
-    "lintfix": "eslint src/**/*.ts --fix",
+    "lint:fix": "eslint src/**/*.ts --fix",
     "pretest": "npm run lint",
     "test": "jest --watch",
     "test:ci": "jest",
