--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,20 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["plugin:@typescript-eslint/recommended"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": ["@typescript-eslint"],
+  "extends": ["plugin:@typescript-eslint/recommended"],
   "rules": {
+    "quotes": ["error", "double"],
     "@typescript-eslint/indent": [
       "error",
       2
     ],
     "@typescript-eslint/no-explicit-any": 0,
     "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/no-parameter-properties": 0
+    "@typescript-eslint/no-parameter-properties": 0,
+    "@typescript-eslint/no-use-before-define": 0,
+    "@typescript-eslint/no-object-literal-type-assertion": 0
   }
 }
