--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest",
     "test:ci": "npm run test -- --ci",
     "test:coverage": "npm run test -- --coverage",
-    "prebuild": "shx rm -rf lib/ ",
+    "prebuild": "shx rm -rf lib/ && npm run test",
     "build": "tsc"
   },
   "repository": {
@@ -48,6 +48,7 @@
     "@babel/runtime": "^7.4.5",
     "@types/jest": "^24.0.13",
     "@types/lodash": "^4.14.130",
+    "@types/mock-fs": "^3.6.30",
     "@types/open": "^6.1.0",
     "@types/request": "^2.48.1",
     "@types/serverless": "^1.18.2",
