Fixed compile issue #160 on windows by adding shx npm package to use in build scripts. Also added some local dev instructions to Readme.md

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest",
     "test:ci": "npm run test -- --ci",
     "test:coverage": "npm run test -- --coverage",
-    "prebuild": "shx rm lib/ -rf",
+    "prebuild": "shx rm -rf lib/ ",
     "build": "tsc"
   },
   "repository": {
