--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/serverless": "^1.18.2",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-jest": "^24.8.0",
     "babel-preset-react-app": "^9.0.0",
     "coveralls": "^3.0.3",
