--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "lodash": "^4.16.6",
     "open": "^6.3.0",
     "request": "^2.81.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "@babel/runtime": "^7.4.5",
@@ -52,6 +53,7 @@
     "@types/open": "^6.1.0",
     "@types/request": "^2.48.1",
     "@types/serverless": "^1.18.2",
+    "@types/xml": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "axios-mock-adapter": "^1.16.0",
