--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
   only:
     - master # Do not build PR branches
     - dev 
+    - myho/betaRelease
     - /^v\d+\.\d+\.\d*$/ # Ensure to build release tags
 
 node_js:
