--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ git:
 # we don't want the same job to run twice on pull request
 branches:
   only:
+    - myho/betaRelease
     - /^v\d+\.\d+\.\d*$/ # Ensure to build release tags
 
 stages:
@@ -35,7 +36,7 @@ jobs:
     
     - stage: publish
       name: "NPM release"
-      node_js: 10
+      node_js: "10"
       before_deploy: 
         - npm run build
       deploy:
