--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ git:
 # we don't want the same job to run twice on pull request
 branches:
   only:
+    - master
+    - dev
     - myho/betaRelease
     - /^v\d+\.\d+\.\d*$/ # Ensure to build release tags
 
