--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,6 @@
 dist: xenial
 
 language: node_js
-node_js:
-  - "8"
-  - "10"
 
 # we don't need previous commits, so don't need default depth of 50
 git:
@@ -29,6 +26,10 @@ install:
 jobs:
   include:
     - stage: test
+      name: "Unit Tests"
+      node_js: 
+        - "8"
+        - "10"
       script:
         - npm run test:ci
       after_success:
