clean up testing configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ branches:
     - /^v.*$/ # Ensure to build release tags of format v1.0.0-1
 
 stages:
-  - name: test
-    if: tag IS NOT present
+  - test
   - name: publish
     if: tag IS present # https://docs.travis-ci.com/user/conditions-v1
 
