--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-azure-functions",
-  "version": "0.7.0",
+  "version": "1.0.0-3",
   "description": "Provider plugin for the Serverless Framework v1.x which adds support for Azure Functions.",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -31,6 +31,9 @@
     "internet of things",
     "serverless.com"
   ],
+  "files": [
+    "lib/"
+  ],
   "dependencies": {
     "@azure/arm-apimanagement": "^5.1.0",
     "@azure/arm-appservice": "^5.7.0",
@@ -42,7 +45,8 @@
     "lodash": "^4.16.6",
     "open": "^6.3.0",
     "request": "^2.81.0",
-    "rimraf": "^2.6.3"
+    "rimraf": "^2.6.3",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "@babel/runtime": "^7.4.5",
@@ -52,6 +56,7 @@
     "@types/open": "^6.1.0",
     "@types/request": "^2.48.1",
     "@types/serverless": "^1.18.2",
+    "@types/xml": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "axios-mock-adapter": "^1.16.0",
