--- a/.travis.yml
+++ b/.travis.yml
@@ -27,16 +27,17 @@ install:
 jobs:
   include:
     - stage: test
-      name: "Compile & Run Unit Tests on Node"
-      node_js: 
-        - "8"
-        - "10"
+      name: "Compile & Unit Tests on Node 8"
+      node_js: "8"
       script:
         - npm run compile
         - npm run test:ci
       after_success:
         - npm run test:coverage
         - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+    - name: "Compile & Unit Tests on Node 10"
+      node_js: "10"
+
     - stage: publish
       name: "NPM release for dev" # rename before merge to master
       node_js: "8"
