--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@azure/arm-apimanagement": "^5.1.0",
     "@azure/arm-appservice": "^5.7.0",
     "@azure/arm-resources": "^1.0.1",
+    "@azure/arm-storage": "^9.0.1",
     "@azure/ms-rest-nodeauth": "^1.0.1",
     "@azure/storage-blob": "^10.3.0",
     "axios": "^0.18.0",
