refactor: add base plugin and rename plugins
1. All plugin classes now extends from base plugin
2. All plugin classes rename to follow naming convention

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "repository": {
     "git": "https://github.com/serverless/serverless-azure-functions"
   },
+  "lcov.path": [
+    "./coverage/lcov.info"
+  ],
   "homepage": "https://github.com/serverless/serverless-azure-functions",
   "keywords": [
     "serverless",
