feat: Spawn offline process with `sls offline` command
Move spawn to offlineService

Add styles to logging

Fix tests with log statements

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "jest": "^24.8.0",
     "jest-cli": "^24.8.0",
     "mock-fs": "^4.10.0",
+    "mock-spawn": "^0.2.6",
     "serverless": "^1.44.1",
     "shx": "^0.3.2",
     "typescript": "^3.4.5"
