--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "xml": "^1.0.1"
   },
   "devDependencies": {
+    "@azure/ms-rest-js": "^1.8.7",
     "@babel/runtime": "^7.4.5",
     "@types/jest": "^24.0.13",
     "@types/jsonpath": "^0.2.0",
