--- a/pipelines/publish-release.yml
+++ b/pipelines/publish-release.yml
@@ -1,10 +1,10 @@
-trigger:
-  branches:
-    include:
-    - master
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
+
+variables:
+- group: npm-release-credentials
 
 steps:
 - task: NodeTool@0
@@ -16,17 +16,6 @@ steps:
   clean: true
   persistCredentials: true
   fetchDepth: 1
-
-- task: Bash@3
-  name: BumpNpmVersion
-  displayName: Bump NPM Prerelease Version
-  inputs:
-    targetType: filePath
-    filePath: ./scripts/version.sh
-    arguments: 'serverless/serverless-azure-functions'
-  env:
-    NPM_TOKEN: $(NPM_TOKEN)
-    SOURCE_BRANCH: $(Build.SourceBranch)
 
 - task: Bash@3
   displayName: 'Publish serverless-azure-functions to NPM'
