--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@azure/ms-rest-nodeauth": "^1.0.1",
     "@azure/storage-blob": "^10.3.0",
     "axios": "^0.18.0",
+    "azure-functions-core-tools": "^2.7.1575",
     "deep-equal": "^1.0.1",
     "js-yaml": "^3.13.1",
     "jsonpath": "^1.0.1",
