use azure devops for unit tests

--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -4,16 +4,13 @@ pr:
   - dev
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-16.04'
 
-steps:
-- task: NodeTool@0
-  displayName: 'Use Node 10.x'
-  inputs:
-    versionSpec: 10.x
+jobs:
+- template: pipelines/templates/unit-tests.yml
+  parameters:
+    nodeVersion: 8.x
 
-- task: Bash@3
-  displayName: 'Build serverless-azure-functions'
-  inputs:
-    targetType: filePath
-    filePath: ./scripts/build.sh
+- template: pipelines/templates/unit-tests.yml
+  parameters:
+    nodeVersion: 10.x
