--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -1,5 +1,7 @@
 jobs:
 - job: "Run tests on ${{ parameters.version }}"
+  pool:
+    vmImage: 'ubuntu-16.04'
   steps:
   - task: NodeTool@0
     displayName: 'Use Node 10.x'
