--- a/pipelines/templates/unit-tests.yml
+++ b/pipelines/templates/unit-tests.yml
@@ -16,7 +16,15 @@ jobs:
       npm run test:coverage
     displayName: 'Run tests'
 
+  - bash: |
+      printenv
+    displayName: make sure we're not leaking info
+
   - ${{ if eq(parameters.nodeVersion, '8') }}:
     - bash: |
+        printenv
         cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
       displayName: 'Upload code coverage report'
+      env:
+        COVERALLS_SERVICE_NAME: "Azure DevOps"
+        COVERALLS_REPO_TOKEN: $(COVERALLS_REPO_TOKEN)
