Fix variable group syntax

--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -8,7 +8,7 @@ pr:
   - dev
 
 variables:
-- coveralls-credentials
+- group: coveralls-credentials  # variable group
 
 jobs:
 - template: templates/unit-tests.yml  # path relative to this file
